# ba

./: .gitignore  cabal.project  package-lock.json  package.json
dealgen/: Main.hs  Structs.hs  ba-dealgen.cabal
dealgen/src/: Main.hs  Structs.hs
downloader/: download.ts  package-lock.json  package.json  tsconfig.json
downloader/src/: download.ts
eval/: linear.py  models.py  runner.py  utils.py
model/: load.py  mlp.py
parse/: ba-parse.cabal  ba-results-parse.cabal
parse/src/: HcpScoreCorr.hs  JsonTypes.hs  Main.hs  PlayerHcpAverages.hs  PlayersByMPs.hs  Utils.hs  schema.sql
queries/: hcp_average.sql  hcp_vs_score.sql  players_by_mp.sql  run.sh
