cabal-version:      3.4
name:               ba-dealgen
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Hai Zhu
maintainer:         halleyzhu@gmail.com
-- copyright:
category:           Data
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ba-dealgen
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , fixed-vector
    hs-source-dirs:   src
    extra-lib-dirs:   .
    extra-libraries:  dds
    default-language: GHC2024
