cabal-version:      3.4
name:               ba-parse
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Hai Zhu
maintainer:         halleyzhu@gmail.com
-- copyright:
category:           Data
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ba-parse
    import:           warnings
    main-is:          Main.hs
    other-modules:    JsonTypes
                    , HcpScoreCorr
                    , PlayerHcpAverages
                    , PlayersByMPs
                    , Utils
    default-extensions: DerivingVia
                      , DuplicateRecordFields
                      , NoFieldSelectors
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , RecordWildCards
                      , StrictData
    build-depends:    base ^>=4.21.0.0
                    , aeson
                    , containers
                    , directory
                    , filepath
                    , text
    hs-source-dirs:   src
    default-language: GHC2024
